--- a/index.html
+++ b/index.html
@@ -15,24 +15,32 @@ body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Noto Sans KR",sans-s
 header{padding:16px;text-align:center;font-size:20px;font-weight:700;background:#fff;border-bottom:1px solid var(--line);}
 main{max-width:1100px;margin:auto;padding:16px;}
 .card{background:var(--card);border:1px solid var(--line);border-radius:10px;padding:16px;margin-bottom:16px;}
-button{padding:12px 16px;border:none;border-radius:8px;background:var(--brand);color:#fff;font-weight:600;cursor:pointer;margin:6px 0; width:100%;}
+button{padding:12px 16px;border:none;border-radius:8px;background:var(--brand);color:#fff;font-weight:600;cursor:pointer;margin:6px 0;}
 button.gray{background:#e5e7eb;color:#111}
 button.green{background:var(--ok)}
 button.red{background:var(--bad)}
-input, textarea {width:100%;padding:12px;border-radius:8px;border:1px solid var(--line);margin-top:6px;line-height:1.4;font-size: 16px; color: #666;font-family: inherit;}
+button.small{padding: 4px 10px; font-size: 13px; margin: 0; margin-left: 8px;}
+input, textarea {width:100%;padding:12px;border-radius:8px;border:1px solid var(--line);margin-top:6px;line-height:1.4;letter-spacing: -0.5px !important;font-size: 16px; color: #666;font-family: inherit;}
+input::placeholder, textarea::placeholder {color: #aaa;}
 label{font-weight:600;margin-top:14px;display:flex; align-items: center; justify-content: space-between;}
 .top-search {display: flex;gap: 8px;align-items: center;margin-bottom: 12px;}
-.top-search input {margin-top: 0;height: 48px; flex:1;}
-.top-search button {height: 48px;margin: 0;width: 80px;}
+.top-search input {margin-top: 0;height: 48px;}
+.top-search button {height: 48px;margin: 0;min-width: 72px;white-space: nowrap;}
 .table-wrapper {max-height: 540px;overflow-y: auto;border: 1px solid var(--line);border-radius: 8px;}
-table{width:100%; border-collapse:collapse;}
+table{width:100%; border-collapse:collapse; position: relative;}
+thead th {position: sticky;top: 0;background: #fdfdfd;z-index: 10;border-bottom: 2px solid var(--line);}
 th,td{padding:12px;border-bottom:1px solid var(--line);text-align:center;vertical-align:middle;}
+tr.approval-row {cursor: pointer;-webkit-user-select: none;user-select: none;}
+td.title{text-align:left;display:flex;flex-direction:column;gap:4px;line-height:1.35;}
 .badge{padding:6px 10px;border-radius:6px;color:#fff;font-size:13px;font-weight:700;}
 .ok{background:var(--ok)}.no{background:var(--bad)}.wait{background:var(--wait)}
+.top-actions{display:flex;gap:10px;margin-bottom:16px;}
+.parent-result{margin-top:12px;padding:12px;border-radius:8px;background:#f9fafb;border:1px solid var(--line); line-height: 1.6; margin-bottom: 10px;}
 .modal{position:fixed;inset:0;background:rgba(0,0,0,.4);display:none;align-items:center;justify-content:center;padding:16px;z-index: 1000;}
 .modal .card{width:min(480px,100%); max-height: 85vh; overflow-y: auto;}
 .btn-row {display: flex; gap: 10px; margin-top: 20px;}
 .btn-row button {flex: 1; margin: 0;}
+.view-time-header {font-size: 14px;color: #666;margin-bottom: 10px;text-align: right;}
 </style>
 </head>
 <body>
@@ -55,7 +63,7 @@ firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 const PASSWORD = "7102";
 
-// ✅ 등록하신 가족 3인의 전화번호
+// ✅ 가족 3인의 전화번호
 const FAMILY_PHONES = ["01021165677", "01093778936", "01035005677"];
 
 let route = { page: "list", id: null };
@@ -72,11 +80,14 @@ db.ref("approvals").on("value", (snapshot) => {
 function sendGroupSMS(text) {
     const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent);
     const link = window.location.href;
-    const fullText = `${text}\n확인: ${link}`;
+    const fullText = `${text}\n확인하기: ${link}`;
     const phoneString = FAMILY_PHONES.join(",");
+    
+    // iOS는 콤마(,), 안드로이드는 세미콜론(;)을 사용하기도 하지만 최근 콤마가 공통적으로 잘 작동합니다.
     const smsUrl = isIOS 
         ? `sms:${phoneString}&body=${encodeURIComponent(fullText)}` 
         : `sms:${phoneString}?body=${encodeURIComponent(fullText)}`;
+    
     window.location.href = smsUrl;
 }
 
@@ -89,9 +100,9 @@ function getStatus(r){
   return (mom === "approve" && dad === "approve") ? "승인" : "반려";
 }
 function badge(s){ return `<span class="badge ${s==='승인'?'ok':(s==='반려'?'no':'wait')}">${s}</span>`; }
-function navigate(p){ route = p; render(); }
+function transKo(v){ return v === "approve" ? "승인" : (v === "reject" ? "반려" : "대기"); }
+function navigate(p, push=true){ route = p; if(push) history.pushState(route,""); render(); }
 
-/* 결재 상신 (이전의 목적, 계획 필드 복구) */
 function submit(){
   const t = document.getElementById("t").value.trim();
   const p = document.getElementById("p").value.trim();
@@ -99,36 +110,74 @@ function submit(){
   const rawC = document.getElementById("c").value.replace(/,/g, '').trim();
   if(!t || !p || !pl || !rawC) return alert("모든 칸을 입력해주세요.");
 
-  const newPost = { id: Date.now().toString(), title:t, purpose:p, plan:pl, cost:rawC, time:now(), mom: "pending", dad: "pending", momC: "", dadC: "" };
+  const newPost = { id: Date.now().toString(), title:t, purpose:p, plan:pl, cost:rawC, time:now(), mom: "pending", dad: "pending", momC: "", dadC: "", momTime: "", dadTime: "" };
   
   db.ref("approvals").push(newPost).then(() => {
-    const msg = `[결재요청] ${t}\n금액: ${Number(rawC).toLocaleString()}원\n결재 부탁드려요!`;
+    const msg = `[결재요청] ${t}\n엄마, 아빠 결재 부탁드려요!`;
     const m = document.getElementById("pwModal");
     m.style.display = "flex";
     m.innerHTML = `
       <div class="card" style="text-align:center;">
         <b style="font-size:18px; display:block; margin-bottom:10px;">✅ 상신 완료</b>
         <p style="color:#666; margin-bottom:20px;">가족들에게 단체 문자를 보낼까요?</p>
-        <button onclick="sendGroupSMS('${msg}'); navigate({page:'list'}); document.getElementById('pwModal').style.display='none';">단체 문자 보내기</button>
-        <button class="gray" style="margin-top:10px;" onclick="navigate({page:'list'}); document.getElementById('pwModal').style.display='none';">닫기</button>
+        <div style="display:flex; gap:10px;">
+          <button style="flex:1; margin:0;" onclick="sendGroupSMS('${msg}'); navigate({page:'list'}); document.getElementById('pwModal').style.display='none';">단체 문자 보내기</button>
+          <button class="gray" style="flex:1; margin:0;" onclick="navigate({page:'list'}); document.getElementById('pwModal').style.display='none';">닫기</button>
+        </div>
       </div>`;
   });
 }
 
-/* 결재 결정 */
+function askDelete(dbId){
+  const m = document.getElementById("pwModal");
+  m.style.display="flex";
+  m.innerHTML=`<div class="card"><b>결재 삭제</b><input id="delPw" type="password" placeholder="비밀번호"><button onclick="authDelete('${dbId}')">확인</button><button class="gray" onclick="this.parentNode.parentNode.style.display='none'">닫기</button></div>`;
+  setTimeout(()=>document.getElementById("delPw").focus(), 100);
+}
+function authDelete(dbId){
+  if(document.getElementById("delPw").value === PASSWORD){
+    db.ref("approvals/"+dbId).remove().then(() => {
+      alert("삭제되었습니다.");
+      document.getElementById("pwModal").style.display="none";
+      navigate({page:'list'});
+    });
+  } else { alert("비밀번호가 틀렸습니다."); }
+}
+
+function openParent(id){
+  const m = document.getElementById("pwModal");
+  m.style.display="flex";
+  m.innerHTML=`<div class="card"><b>부모 인증</b><input id="pw" type="password" placeholder="비밀번호"><button onclick="authParent('${id}')">확인</button><button class="gray" onclick="this.parentNode.parentNode.style.display='none'">닫기</button></div>`;
+  setTimeout(()=>document.getElementById("pw").focus(), 100);
+}
+function authParent(id){
+  if(document.getElementById("pw").value!==PASSWORD) return alert("틀렸습니다.");
+  document.getElementById("pwModal").style.display="none";
+  const r = allData.find(x=>x.id===id);
+  let h = "";
+  if(r.mom==='pending') h+=`<div class="card"><b>엄마 결재</b><textarea id="momC" rows="3" placeholder="의견"></textarea><button class="green" onclick="decide('${r.dbId}','mom','approve','${r.title}')">승인</button><button class="red" onclick="decide('${r.dbId}','mom','reject','${r.title}')">반려</button></div>`;
+  if(r.dad==='pending') h+=`<div class="card"><b>아빠 결재</b><textarea id="dadC" rows="3" placeholder="의견"></textarea><button class="green" onclick="decide('${r.dbId}','dad','approve','${r.title}')">승인</button><button class="red" onclick="decide('${r.dbId}','dad','reject','${r.title}')">반려</button></div>`;
+  document.getElementById("parentArea").innerHTML = h || "<p>이미 결재를 완료하셨습니다.</p>";
+}
 function decide(dbId, who, val, title){
   const comment = document.getElementById(who+"C").value;
-  db.ref("approvals/"+dbId).update({ [who]: val, [who+"C"]: comment }).then(() => {
+  const updates = {};
+  updates[who] = val;
+  updates[who+"C"] = comment;
+  updates[who+"Time"] = now();
+  db.ref("approvals/"+dbId).update(updates).then(() => {
     const resultStr = val === 'approve' ? '✅승인' : '❌반려';
-    const msg = `[결재결과] ${title}\n${who==='mom'?'엄마':'아빠'}님이 ${resultStr} 하셨습니다.`;
+    const msg = `[결재결과] ${title}\n${who==='mom'?'엄마':'아빠'}님이 ${resultStr} 하셨습니다.\n의견: ${comment || '없음'}`;
     const m = document.getElementById("pwModal");
     m.style.display = "flex";
     m.innerHTML = `
       <div class="card" style="text-align:center;">
-        <b style="font-size:18px; display:block; margin-bottom:10px;">✅ 처리 완료</b>
+        <b style="font-size:18px; display:block; margin-bottom:10px;">✅ 결재 완료</b>
         <p style="color:#666; margin-bottom:20px;">결과를 가족들에게 문자로 알릴까요?</p>
-        <button onclick="sendGroupSMS('${msg}'); navigate({page:'list'}); document.getElementById('pwModal').style.display='none';">단체 문자 보내기</button>
-        <button class="gray" style="margin-top:10px;" onclick="navigate({page:'list'}); document.getElementById('pwModal').style.display='none';">닫기</button>
+        <div style="display:flex; gap:10px;">
+          <button style="flex:1; margin:0;" onclick="sendGroupSMS('${msg}'); navigate({page:'list'}); document.getElementById('pwModal').style.display='none';">단체 문자 보내기</button>
+          <button class="gray" style="flex:1; margin:0;" onclick="navigate({page:'list'}); document.getElementById('pwModal').style.display='none';">닫기</button>
+        </div>
       </div>`;
   });
 }
@@ -141,60 +190,76 @@ function render(){
 
   if(route.page === "list"){
     app.innerHTML = `
-      <div class="top-search"><input id="q" placeholder="검색어 입력" value="${esc(keyword)}"><button class="gray" onclick="keyword=document.getElementById('q').value; render();">검색</button></div>
-      <div style="display:flex; gap:10px; margin-bottom:16px;">
-        <button onclick="navigate({page:'new'})">결재올리기</button>
-        <button class="gray" onclick="openStats()">통계</button>
-      </div>
+      <div class="top-search"><button class="gray" onclick="doSearch()">검색</button><input id="q" placeholder="검색어 입력" value="${esc(keyword)}"></div>
+      <div class="top-actions"><button onclick="navigate({page:'new'})">결재올리기</button><button onclick="openStats()">통계</button></div>
       <div class="table-wrapper">
         <table>
-          <thead><tr><th>제목 / 시간</th><th>상태</th></tr></thead>
+          <thead><tr><th>No</th><th>제목 / 상신시간</th><th>상태</th></tr></thead>
           <tbody>
-            ${displayData.map(r=>`
-              <tr onclick="navigate({page:'view', id:'${r.id}'})">
-                <td style="text-align:left;"><b>${esc(r.title)}</b><br><small>${r.time}</small></td>
+            ${displayData.map((r,i)=>`
+              <tr class="approval-row" onclick="navigate({page:'view', id:'${r.id}'})">
+                <td>${displayData.length - i}</td>
+                <td class="title"><div>${esc(r.title)}</div><small>${r.time}</small></td>
                 <td>${badge(getStatus(r))}</td>
               </tr>
             `).join("")}
           </tbody>
         </table>
       </div>`;
-  } else if(route.page === "new"){
+    const q=document.getElementById("q"); if(q) q.addEventListener("keydown", e => e.key === "Enter" && doSearch());
+  } 
+  else if(route.page === "new"){
     app.innerHTML = `<div class="card">
-      <label>제목</label><input id="t" placeholder="무엇을 사고 싶나요?">
-      <label>목적</label><textarea id="p" rows="2" placeholder="왜 필요한가요?"></textarea>
-      <label>상세 계획</label><textarea id="pl" rows="4" placeholder="어떻게 사용할 건가요?"></textarea>
-      <label>비용(원)</label><input id="c" type="text" oninput="this.value=formatComma(this.value)">
-      <button onclick="submit()">결재 상신</button>
-      <button class="gray" onclick="navigate({page:'list'})">취소</button>
-    </div>`;
-  } else if(route.page === "view"){
-    const r = allData.find(x => x.id === route.id);
-    app.innerHTML = `<div class="card">
-      <h3>${esc(r.title)}</h3>
-      <p><b>금액:</b> ${Number(r.cost).toLocaleString()}원</p>
-      <p><b>목적:</b> ${esc(r.purpose)}</p>
-      <p><b>계획:</b> ${esc(r.plan)}</p>
-      <hr>
-      <label>엄마 결재</label><textarea id="momC" rows="2" placeholder="의견">${esc(r.momC)}</textarea>
-      <div class="btn-row"><button class="green" onclick="decide('${r.dbId}','mom','approve','${r.title}')">승인</button><button class="red" onclick="decide('${r.dbId}','mom','reject','${r.title}')">반려</button></div>
-      <label style="margin-top:15px;">아빠 결재</label><textarea id="dadC" rows="2" placeholder="의견">${esc(r.dadC)}</textarea>
-      <div class="btn-row"><button class="green" onclick="decide('${r.dbId}','dad','approve','${r.title}')">승인</button><button class="red" onclick="decide('${r.dbId}','dad','reject','${r.title}')">반려</button></div>
-      <button class="gray" style="margin-top:20px;" onclick="navigate({page:'list'})">목록으로</button>
+      <label>제목</label><input id="t" placeholder="무엇을 사고 싶나요? 또는 하고 싶나요?">
+      <label>목적</label><textarea id="p" rows="3" placeholder="왜 필요한지(목표/이유)를 써보세요"></textarea>
+      <label>계획</label><textarea id="pl" rows="5" placeholder="앞으로 무엇을 어떻게 할 건지 자세하게 써보세요"></textarea>
+      <label>비용(원)</label><input id="c" type="text" placeholder="얼마인지 자유롭게 생각하고 써보세요" oninput="this.value=formatComma(this.value)">
+      <div class="btn-row">
+        <button onclick="submit()">결재올리기</button>
+        <button class="gray" onclick="navigate({page:'list'})">취소</button>
+      </div>
     </div>`;
   }
+  else if(route.page === "view"){
+    const r = allData.find(x => x.id === route.id);
+    if(!r) return navigate({page:'list'});
+    app.innerHTML = `
+      <div class="view-time-header">상신: ${r.time}</div>
+      <div class="card">
+        <label>제목</label><input readonly value="${esc(r.title)}">
+        <label>목적</label><textarea rows="3" readonly>${esc(r.purpose)}</textarea>
+        <label>계획</label><textarea rows="5" readonly>${esc(r.plan)}</textarea>
+        <label>비용(원)</label><input readonly value="${Number(r.cost).toLocaleString()}">
+      </div>
+      <div class="parent-result">
+        <b>부모 결재 기록</b><br>
+        엄마: ${transKo(r.mom)} / ${esc(r.momC||"-")}<br>
+        아빠: ${transKo(r.dad)} / ${esc(r.dadC||"-")}
+      </div>
+      <div id="parentArea"></div>
+      <button style="width:100%;" onclick="openParent('${r.id}')">부모 결재</button>
+      <div class="btn-row">
+        <button class="gray" onclick="navigate({page:'list'})">목록</button>
+        <button class="red" onclick="askDelete('${r.dbId}')">삭제</button>
+      </div>`;
+  }
 }
-
+function doSearch(){ keyword = document.getElementById("q").value.trim(); render(); }
 function openStats(){
   const stats = {};
   allData.filter(x => getStatus(x) !== "대기").forEach(item => {
-    const key = item.time.substring(0,7);
-    if(!stats[key]) stats[key] = {app:0, appS:0};
-    if(getStatus(item)==="승인"){ stats[key].app++; stats[key].appS+=Number(item.cost); }
+    const key = item.time.substring(0,7).replace("-","년 ") + "월";
+    if(!stats[key]) stats[key] = {app:0, appS:0, rej:0, rejS:0};
+    const s = getStatus(item); const c = Number(item.cost);
+    if(s==="승인"){ stats[key].app++; stats[key].appS+=c; } else { stats[key].rej++; stats[key].rejS+=c; }
   });
-  alert(Object.keys(stats).map(k => `[${k}] 승인: ${stats[k].app}건 / 합계: ${stats[k].appS.toLocaleString()}원`).join("\n") || "통계 데이터가 없습니다.");
+  const sorted = Object.keys(stats).sort().reverse();
+  const m = document.getElementById("statModal");
+  m.style.display="flex";
+  m.innerHTML = `<div class="card"><h3>월간 통계</h3><div class="table-wrapper">${sorted.map(k=>`<div class="stat-item"><b>${k}</b><br>✅ 승인: ${stats[k].app}건 (${stats[k].appS.toLocaleString()}원) <br>❌ 반려: ${stats[k].rej}건 (${stats[k].rejS.toLocaleString()}원)</div>`).join("") || "기록 없음"}</div><button onclick="this.parentNode.parentNode.style.display='none'" style="width:100%">닫기</button></div>`;
 }
-render();
+window.onpopstate = (e) => { if(e.state) { route = e.state; render(); } };
+history.replaceState({page:'list'}, "");
 </script>
 </body>
 </html>
