--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ input, textarea {width:100%;padding:12px;border-radius:8px;border:1px solid var(
 input::placeholder, textarea::placeholder {color: #aaa;}
 label{font-weight:600;margin-top:14px;display:flex; align-items: center; justify-content: space-between;}
 
+/* ✅ 요청사항: 목적 세로 사이즈 20%, 계획 세로 사이즈 30% 확대 반영 */
 textarea.purpose-box { height: calc((1.4em * 2 + 24px) * 1.2) !important; overflow-y: auto; resize: none; }
 textarea.plan-box { height: calc((1.4em * 3 + 24px) * 1.3) !important; overflow-y: auto; resize: none; }
 
@@ -77,8 +78,6 @@ firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 const PASSWORD = "7102";
 
-// 수신자 리스트는 유지하되, 주소창에는 포함하지 않도록 수정
-
 let route = { page: "list", id: null };
 let keyword = "";
 let allData = [];
@@ -89,12 +88,9 @@ db.ref("approvals").on("value", (snapshot) => {
   render();
 });
 
-/* ✅ 수정: 수신자 없이 내용만 전달하여 안정성 확보 */
 function getSmsUrl(text) {
     const ua = navigator.userAgent.toLowerCase();
     const isIOS = /iphone|ipad|ipod/.test(ua);
-    
-    // 전화번호를 비워둠으로써 사용자가 직접 주소록에서 선택하거나 입력하게 함
     return isIOS 
         ? `sms:&body=${encodeURIComponent(text)}` 
         : `sms:?body=${encodeURIComponent(text)}`;
