--- a/index.html
+++ b/index.html
@@ -28,9 +28,21 @@ input, textarea {width:100%;padding:12px;border-radius:8px;border:1px solid var(
 input::placeholder, textarea::placeholder {color: #aaa;}
 label{font-weight:600;margin-top:14px;display:flex; align-items: center; justify-content: space-between;}
 
-/* ✅ 요청사항: 목적 세로 사이즈 20%, 계획 세로 사이즈 30% 확대 반영 */
-textarea.purpose-box { height: calc((1.4em * 2 + 24px) * 1.2) !important; overflow-y: auto; resize: none; }
-textarea.plan-box { height: calc((1.4em * 3 + 24px) * 1.3) !important; overflow-y: auto; resize: none; }
+/* ✅ 입력 칸 사이즈 강제 고정 (기존 대비 확실하게 체감되도록 수치 조정) */
+/* 목적: 기존 약 60px -> 100px (20% 이상 넉넉히 확대) */
+textarea.purpose-box { 
+    height: 100px !important; 
+    min-height: 100px !important; 
+    overflow-y: auto !important; 
+    resize: none; 
+}
+/* 계획: 기존 약 90px -> 160px (30% 이상 확실히 확대) */
+textarea.plan-box { 
+    height: 160px !important; 
+    min-height: 160px !important; 
+    overflow-y: auto !important; 
+    resize: none; 
+}
 
 .top-actions {display:flex; gap:8px; margin-bottom:12px; justify-content: flex-start;}
 .btn-submit, .btn-stats {width: auto !important; margin: 0 !important; padding: 9px 20px !important;}
